@@ -86,7 +86,7 @@ public class JSONArray {
     /**
      * The arrayList where the JSONArray's properties are kept.
      */
-    private final ArrayList myArrayList;
+    private ArrayList myArrayList;
 
 
     /**
@@ -605,7 +605,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(int value) {
-        put(Integer.valueOf(value));
+        put(new Integer(value));
         return this;
     }
 
@@ -617,7 +617,7 @@ public class JSONArray {
      * @return this.
      */
     public JSONArray put(long value) {
-        put(Long.valueOf(value));
+        put(new Long(value));
         return this;
     }
 
@@ -703,7 +703,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, Integer.valueOf(value));
+        put(index, new Integer(value));
         return this;
     }
 
@@ -718,7 +718,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, Long.valueOf(value));
+        put(index, new Long(value));
         return this;
     }
 
